[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
anyhow = "1.0.80"
assert2 = "0.3.14"

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
itertools = "0.12.1"
num-integer = "0.1.46"
once_cell = "1.19.0"
pico-args = "0.5.0"
regex = "1.10.3"
test-case = "3.3.1"
tinyjson = "2.5.1"

# Solution dependencies
